# biobenchguard

./: .dockerignore  .gitignore  ARTIFACT.md  AUDIT_TRAIL.md  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: docker.yml  tests.yml
biobenchguard/: __init__.py  cli.py  engine.py  repro.py
docs/: artifact_charter.md  case_yaml_schema.md  command_reference.md  data_sources.md  docker_quickstart.md  historical_l2_program.md  repository_map.md  reviewer_reproduction.md
examples/minimal_case/: README.md  case.yaml
examples/minimal_case/expected_outputs/: allowed_claims.md  audit_report.md  feasibility_matrix.csv  forbidden_claims.md  report.json  report.md  (+2 more)
examples/null_degenerate_tdc/: README.md  case.yaml
examples/typeA_group_shortcut/: README.md  case.yaml
examples/typeE_selection_leakage/: README.md  case.yaml
results_locked/: GOLDEN_FILES.md  RESULTS_INDEX.md
scripts/: cli_smoke_test.sh  download_public_data.py
source_data/: Fig7_wheat_report.json  Fig7_worked_example_source_data.csv  README.md  figure_to_sourcedata_map.csv  lod_ci_results.csv  lod_power_curves.csv  rice_lod_ci.csv  rice_lod_curves.csv  rice_typeE_detector.csv  rice_typeE_power.csv  rr_results.csv  source_data_manifest.csv  typeA_corrected_g3.csv  typeA_rice_g3.csv  typeE_detector_fp.csv  typeE_matched_fpr_power.csv  uncertainty_budget_results.csv  wheat_typeA_g3.csv
source_data/tables/: Table1_evidence_ladder.csv  Table2_data_provenance.csv  Table3_detector_specificity.csv  Table4_parameters.csv
tests/: test_cli.py  test_golden_files.py
(+23 files in other folders)
